# sliver_com

./: - new 2안.txt  .env.example  .gitignore  .mise.toml  .pnp.cjs  README.md  TEAM_GUIDE.md  azure-prep-checklist.md  implementation-plan.md  mise.toml  package.json  project.md  pyproject.toml  setup.sh  task.md
.docs/: implementation-plan.md  project.md  task.md
docs/: 1안.md  TEAM_GUIDE.md  architect.md
so-momeet/admin/: README.md  pyproject.toml
so-momeet/admin/admin_project/: manage.py
so-momeet/admin/admin_project/admin_project/: asgi.py  settings.py  wsgi.py
so-momeet/backend/: README.md  pyproject.toml
so-momeet/backend/app/: main.py
so-momeet/backend/tests/: test_health.py
so-momeet/mobile/: App.tsx  package.json  tsconfig.json
