[project]
name = "sliver_com"
version = "0.1.0"
description = "시니어 소모임 플랫폼 - 모든 의존성 통합"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI Core
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    
    # Database (Azure)
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # Azure Database for PostgreSQL
    "redis>=5.0.0",            # Azure Cache for Redis
    
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # HTTP Client
    "httpx>=0.27.0",
    "requests>=2.31.0",
    
    # Environment & Config
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    
    # Utils
    "pillow>=10.0.0",
    "python-slugify>=8.0.0",
    "pytz>=2023.3",
    
    # Development Tools
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0"
]

[project.scripts]
api = "apps.api.app.main:run"
migrate = "alembic.main:main"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py312"] 
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true